--- a/package.json
+++ b/package.json
@@ -4,6 +4,6 @@
     "tailwindcss": "^4.1.16"
   },
   "scripts": {
-    "build": "npx @tailwindcss/cli -i ./src/input.css -o ./src/output.css --watch"
+    "build": "npx @tailwindcss/cli -i ./input.css -o ./output.css --watch"
   }
 }
